Fix resizing issues for menu page on mobile

--- a/style.css
+++ b/style.css
@@ -182,6 +182,12 @@ header .logo {
     align-items: center;
 }
 
+@media only screen and (min-width: 600px) {
+    .nav li:hover {
+        color: rgb(255, 106, 0);
+    }
+}
+
 .nav li {
     text-align: center;
     padding: clamp(0.1rem, .5vw, 1rem);
@@ -421,34 +427,38 @@ footer .logo {
     align-content: center;
 }
 
-/* menu page (page of MENUS) */
+/* menu page */
 
 .menu-main {
     margin-top: calc(.5vw + .5vh + .5rem);
     width: 85vw;
-    display: grid;
-    justify-items: center;
-    grid-template-columns: 1fr;
-    grid-auto-rows: min-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: nowrap;
     gap: 1.3rem;
 }
 
 .menu-title {
     margin-bottom: 1.5rem;
     max-height: calc(1rem + 1.5vh + 1.5vw);
+    display: flex;
+    justify-content: center;
 }
 
 .menu-title img {
-    height: 100%;
+    max-height: 100%;
     width: auto;
 }
 
 .menu-item {
     max-height: calc(1.5rem + 1vh + 1vw);
+    display: flex;
+    justify-content: center;
 }
 
 .menu-item img {
-    height: 100%;
+    max-height: 100%;
     width: auto;
     max-width: 85vw;
 }
